Bug 1490370 - Exit early when there is no scrollbar content to add r=mstange a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D5548

--HG--
extra : rebase_source : bbfcd99e1bba598db0b0db6d521f2216bcdaee10
extra : source : 1eee82c8caa874078f9c77b3f074d96700d1b99d